fix DatePicker align

--- a/components/date-picker/style/Picker.less
+++ b/components/date-picker/style/Picker.less
@@ -33,7 +33,6 @@
   outline: none;
   font-size: @font-size-base;
   transition: opacity 0.3s ease;
-  vertical-align: middle;
 
   > input {
     outline: none;
